--- a/app/src/main/res/layout/fragment_updates_section_header.xml
+++ b/app/src/main/res/layout/fragment_updates_section_header.xml
@@ -7,20 +7,20 @@
     <TextView android:id="@+id/updateFragment_section_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_marginTop="@dimen/activity_vertical_margin"
+              android:layout_marginTop="8dp"
               android:layout_marginStart="@dimen/activity_horizontal_margin"
               android:layout_marginEnd="@dimen/activity_horizontal_margin"
-              android:textSize="16sp"
+              android:textSize="@dimen/body_font_size"
               android:textColor="@color/fifty_black"
               tools:text="RECENT"/>
 
     <View android:layout_width="match_parent"
-          android:layout_height="1dp"
-          android:layout_marginLeft="15dp"
-          android:layout_marginRight="15dp"
-          android:layout_marginTop="5dp"
+          android:layout_height="2px"
+          android:layout_marginLeft="16dp"
+          android:layout_marginRight="16dp"
+          android:layout_marginTop="4dp"
           android:background="@color/fifty_black"
-          android:layout_marginBottom="8dp"
+          android:layout_marginBottom="4dp"
         />
 
 
