--- a/app/src/main/res/layout/college_picker_item.xml
+++ b/app/src/main/res/layout/college_picker_item.xml
@@ -7,11 +7,11 @@
     <TextView android:id="@+id/collegePicker_item_name_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginStart="16dp"
-              android:layout_marginEnd="16dp"
+              android:layout_margin="@dimen/activity_horizontal_margin"
               android:layout_centerVertical="true"
               android:ellipsize="end"
-              android:singleLine="true"
+              android:lines="1"
+              android:textSize="@dimen/header_font_size"
               tools:text="Baruch College"
         />
 
