--- a/app/src/main/res/layout/custom_snack_layout.xml
+++ b/app/src/main/res/layout/custom_snack_layout.xml
@@ -23,28 +23,28 @@
         android:id="@+id/snackbar_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|left|start"
         android:layout_weight="1"
-        android:paddingTop="@dimen/design_snackbar_padding_vertical"
+        android:ellipsize="end"
+        android:maxLines="2"
         android:paddingBottom="@dimen/design_snackbar_padding_vertical"
         android:paddingLeft="@dimen/design_snackbar_padding_horizontal"
         android:paddingRight="@dimen/design_snackbar_padding_horizontal"
-        android:textAppearance="@style/TextAppearance.Design.Snackbar.Message"
-        android:maxLines="@integer/design_snackbar_text_max_lines"
-        android:layout_gravity="center_vertical|left|start"
-        android:ellipsize="end"/>
+        android:paddingTop="@dimen/design_snackbar_padding_vertical"
+        android:textAppearance="@style/TextAppearance.Design.Snackbar.Message"/>
 
     <Button
         android:id="@+id/snackbar_action"
+        style="?attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/design_snackbar_extra_spacing_horizontal"
         android:layout_gravity="center_vertical|right|end"
-        android:paddingTop="@dimen/design_snackbar_padding_vertical"
+        android:layout_marginStart="@dimen/design_snackbar_extra_spacing_horizontal"
         android:paddingBottom="@dimen/design_snackbar_padding_vertical"
         android:paddingLeft="@dimen/design_snackbar_padding_horizontal"
         android:paddingRight="@dimen/design_snackbar_padding_horizontal"
-        android:visibility="gone"
+        android:paddingTop="@dimen/design_snackbar_padding_vertical"
         android:textColor="?attr/colorAccent"
-        style="?attr/borderlessButtonStyle"/>
+        android:visibility="gone"/>
 
 </merge>
