--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -15,40 +15,37 @@
 
     <LinearLayout android:id="@+id/message_container"
                   android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
+                  android:layout_height="48dp"
                   android:layout_alignParentBottom="true"
                   android:background="@color/pure_white"
-                  android:orientation="horizontal"
                   android:paddingStart="@dimen/activity_horizontal_margin">
+
+
 
         <EditText
             android:id="@+id/message_input"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="7"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:background="@null"
             android:hint="@string/prompt_message"
             android:inputType="textCapSentences|textShortMessage|textMultiLine"
             android:maxLines="3"
+            android:layout_weight="1"
             android:paddingBottom="12dp"
             android:paddingTop="12dp"
             android:singleLine="false"
             android:textSize="@dimen/body_font_size"
         />
 
-        <RelativeLayout android:id="@+id/send_button"
-                        android:layout_width="0px"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:alpha="0.25">
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerInParent="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/icon_send"/>
-
-        </RelativeLayout>
+        <ImageView android:id="@+id/send_button"
+                   android:layout_width="40dp"
+                   android:layout_height="40dp"
+                   android:layout_gravity="bottom|end"
+                   android:layout_marginEnd="8dp"
+                   android:padding="8dp"
+                   android:scaleType="fitCenter"
+                   android:src="@drawable/icon_send"
+        />
 
     </LinearLayout>
 
