--- a/app/src/main/res/layout/fragment_feed_detail_page.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page.xml
@@ -10,19 +10,13 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <android.support.design.widget.AppBarLayout android:id="@+id/toolbar_container"
-        android:layout_width="match_parent"
-                                                android:layout_height="?android:attr/actionBarSize"
-                                                android:layout_alignParentTop="true"
-    >
-
-        <android.support.v7.widget.Toolbar android:id="@+id/feed_detail_toolbar"
-                                           android:layout_width="match_parent"
-                                           android:layout_height="?android:attr/actionBarSize"
-                                           android:background="@color/colorPrimary"
-                                           android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        />
-    </android.support.design.widget.AppBarLayout>
+    <android.support.v7.widget.Toolbar android:id="@+id/feed_detail_toolbar"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="?android:attr/actionBarSize"
+                                       android:background="@color/colorPrimary"
+                                       android:elevation="4dp"
+                                       android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    />
 
     <LinearLayout android:id="@+id/comment_container"
                   android:layout_width="match_parent"
@@ -43,9 +37,10 @@
             android:orientation="horizontal">
 
             <RelativeLayout android:id="@+id/comment_checkbox_container"
-                            android:layout_width="0px"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1">
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_gravity="center_vertical"
+            >
 
                 <CheckBox android:id="@+id/comment_anon_checkbox"
                           android:layout_width="wrap_content"
@@ -72,7 +67,7 @@
                 android:id="@+id/comment_field"
                 android:layout_width="0px"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
+                android:layout_weight="1"
                 android:background="#FFFFFF"
                 android:hint="Enter your comment... "
                 android:inputType="textCapSentences|textMultiLine|textShortMessage"
@@ -84,16 +79,20 @@
 
 
             <RelativeLayout android:id="@+id/comment_send_button_container"
-                            android:layout_width="0px"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1">
+                            android:layout_width="52dp"
+                            android:layout_height="48dp"
+                            android:layout_gravity="center_vertical"
+            >
 
                 <ImageView
                     android:id="@+id/feed_detail_send_comment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="12dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="12dp"
                     android:alpha="0.25"
                     android:scaleType="fitCenter"
                     android:src="@drawable/icon_send"/>
@@ -118,14 +117,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/comment_container"
-        android:layout_below="@id/toolbar_container"
+        android:layout_below="@id/feed_detail_toolbar"
     />
 
     <android.support.v7.widget.RecyclerView android:id="@+id/feed_detail_mentions"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:layout_above="@id/comment_container"
-                                            android:layout_below="@id/toolbar_container"
+                                            android:layout_below="@id/feed_detail_toolbar"
                                             android:background="@color/white"
                                             android:visibility="gone"/>
 
