--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -71,13 +71,14 @@
     </LinearLayout>
 
     <RelativeLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/pure_white"
     >
 
         <LinearLayout android:id="@+id/feed_detail_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/comment_user_image"
@@ -138,8 +139,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/feed_detail_main"
-            android:visibility="gone"
-            android:indeterminateOnly="true"/>
+            android:indeterminateOnly="true"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
