--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,6 +104,6 @@
     </style>
     
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-           <item name="android:windowBackground">@color/colorPrimary</item>
+           <item name="android:windowBackground">@color/seperator_color</item>
     </style>
 </resources>
