--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -9,6 +9,15 @@
                  layout="@layout/tool_bar"/>
     </android.support.design.widget.AppBarLayout>
 
+    <ProgressBar android:id="@+id/progress_bar"
+                 style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                 android:layout_width="match_parent"
+                 android:layout_height="2dp"
+                 android:max="100"
+                 android:progress="50"
+                 android:progressDrawable="@drawable/web_view_progress"
+    />
+
     <WebView
         android:id="@+id/webviewactivity_webview"
         android:layout_width="match_parent"
