--- a/app/src/main/res/layout/fragment_feed_detail_page.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page.xml
@@ -5,6 +5,7 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +16,8 @@
                                        android:layout_height="?android:attr/actionBarSize"
                                        android:background="@color/colorPrimary"
                                        android:elevation="4dp"
-                                       android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                                       app:theme="@style/ThemeOverlay.AppCompat.Dark"
+                                       app:popupTheme="@style/MyDarkToolbarStyle"
     />
 
     <LinearLayout android:id="@+id/comment_container"
@@ -89,10 +91,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="12dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
                     android:alpha="0.25"
                     android:scaleType="fitCenter"
                     android:src="@drawable/icon_send"/>
