--- a/app/src/main/res/layout/fragment_find_friends.xml
+++ b/app/src/main/res/layout/fragment_find_friends.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     android:id="@+id/postContainer"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,86 +7,70 @@
     android:layout_height="match_parent"
     tools:context="com.linute.linute.LoginAndSignup.CollegePickerActivity">
 
-    <LinearLayout android:id="@+id/findFriends_search_parent"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:background="@color/colorPrimary"
-                  android:elevation="4dp">
-
-        <android.support.v7.widget.SearchView android:id="@+id/findFriends_search_view"
-                                              android:layout_width="match_parent"
-                                              android:layout_height="wrap_content"
-                                              android:layout_margin="4dp"
-                                              android:background="@drawable/search_view_background"
-                                              android:inputType="textPersonName|textCapWords"
-                                              android:queryHint="Search"/>
-
-    </LinearLayout>
-
-
     <TextView android:id="@+id/findFriends_text"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:layout_centerHorizontal="true"
+              android:layout_gravity="center_horizontal"
               android:layout_marginEnd="64dp"
               android:layout_marginStart="64dp"
               android:layout_marginTop="150dp"
               android:gravity="center"
+              android:text="No results found"
               android:textSize="18sp"
-              android:visibility="invisible"
-              tools:text="Enter your friend's name in the search bar"
-        />
+              android:visibility="gone"
+    />
 
     <ProgressBar
         android:id="@+id/findFriends_progressbar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:visibility="gone"/>
-
-    <Button android:id="@+id/findFriends_reload_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="150dp"
-            android:text="Retry"
-            android:visibility="gone"
-        />
+        android:layout_gravity="center"
+        android:visibility="gone"
+    />
 
 
     <android.support.v7.widget.RecyclerView android:id="@+id/findFriends_recycler_view"
                                             android:layout_width="match_parent"
-                                            android:layout_height="wrap_content"
-                                            android:layout_below="@id/findFriends_search_parent"/>
+                                            android:layout_height="match_parent"
+    />
 
-    <RelativeLayout android:id="@+id/findFriends_rationale_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="150dp"
-                    android:visibility="gone"
+    <LinearLayout android:id="@+id/findFriends_rationale_text"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_marginTop="@dimen/activity_horizontal_margin"
+                  android:orientation="vertical"
+                  android:visibility="gone"
     >
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="center_horizontal"
+                   android:src="@drawable/help23"
+        />
 
         <TextView android:id="@+id/findFriends_rat_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
+                  android:layout_gravity="center_horizontal"
                   android:layout_marginEnd="32dp"
                   android:layout_marginStart="32dp"
+                  android:layout_marginTop="@dimen/activity_horizontal_margin"
                   android:gravity="center"
                   android:text="@string/need_contant_permission"/>
 
-        <TextView android:id="@+id/findFriends_turn_on"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_below="@id/findFriends_rat_text"
-                  android:layout_centerHorizontal="true"
-                  android:padding="20dp"
-                  android:text="Allow"
-                  android:textColor="@color/colorPrimary"
-                  android:textSize="15sp"
-                  android:textStyle="bold"/>
-    </RelativeLayout>
+        <Button android:id="@+id/findFriends_turn_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:background="@color/facebook_blue"
+                android:padding="@dimen/activity_horizontal_margin"
+                android:text="connect with facebook"
+                android:textColor="@color/pure_white"
+        />
+
+    </LinearLayout>
 
 
-</RelativeLayout>
+</FrameLayout>
