--- a/app/src/main/res/layout/fragment_findfriends_choices.xml
+++ b/app/src/main/res/layout/fragment_findfriends_choices.xml
@@ -1,21 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <include android:id="@+id/findFriends_search_name"
-             layout="@layout/fragment_people_header_name"
-        />
+    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="?android:attr/actionBarSize"
+                                       android:background="@color/secondaryColor"
+                                       android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <include android:id="@+id/findFriends_search_facebook"
-             layout="@layout/fragment_people_header_facebook"
-        />
+        <EditText android:id="@+id/search_view"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                  android:background="@null"
+                  android:gravity="center_vertical"
+                  android:hint="Search"
+                  android:inputType="textPersonName"
+                  android:textColor="@color/white"
+                  android:textCursorDrawable="@drawable/edit_text_cursor"/>
 
-    <include android:id="@+id/findFriends_search_contacts"
-             layout="@layout/fragment_people_header_contacts"
-             />
+    </android.support.v7.widget.Toolbar>
 
+    <android.support.design.widget.TabLayout android:id="@+id/tabs"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content"
+                                             app:tabBackground="@color/colorPrimary"
+                                             app:tabIndicatorColor="@color/secondaryColor"
+                                             app:tabSelectedTextColor="@color/secondaryColor"
+                                             app:tabTextColor="@color/pure_white"/>
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
