--- a/app/src/main/res/layout/fragment_profile_header3.xml
+++ b/app/src/main/res/layout/fragment_profile_header3.xml
@@ -1,60 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/colorPrimary"
               android:orientation="vertical">
 
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginEnd="@dimen/activity_horizontal_margin"
+              android:layout_marginStart="@dimen/activity_horizontal_margin"
+              android:layout_marginTop="@dimen/activity_horizontal_margin"
+              android:ellipsize="end"
+              android:lines="1"
+              android:textAllCaps="true"
+              android:textColor="@color/secondaryColor"
+              android:textSize="24sp"
+              android:textStyle="bold"
+              tools:text="QI FENG HUANG"
+    />
 
-    <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:orientation="horizontal"
+    <TextView android:id="@+id/college_name"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginBottom="@dimen/activity_horizontal_margin"
+              android:layout_marginEnd="@dimen/activity_horizontal_margin"
+              android:layout_marginStart="@dimen/activity_horizontal_margin"
+              android:alpha="0.5"
+              android:ellipsize="end"
+              android:lines="1"
+              android:textAllCaps="true"
+              android:textColor="@color/secondaryColor"
+              android:textSize="@dimen/sub_font_size"
+              tools:text="City College of New York"
+    />
+
+    <TextView android:id="@+id/profilefrag_status"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginBottom="@dimen/activity_horizontal_margin"
+              android:layout_marginEnd="@dimen/activity_horizontal_margin"
+              android:layout_marginStart="@dimen/activity_horizontal_margin"
+              android:ellipsize="end"
+              android:lines="3"
+              android:textColor="#FFFFFF"
+              android:textSize="@dimen/body_font_size"
+              tools:text="TEST TEST TEST TESTTEST TEST TEST TESTTEST TEST TEST TESTTEST TEST TEST TESTTEST TEST TEST TESTTEST TEST TEST TEST "
+    />
+
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
     >
 
-        <RelativeLayout android:id="@+id/profHeader_images"
-                        android:layout_width="91dp"
-                        android:layout_height="91dp"
-                        android:layout_centerInParent="true"
-                        android:layout_marginTop="@dimen/activity_horizontal_margin"
-                        android:background="@drawable/circle"
-        >
-
-            <!--<ImageView android:layout_width="90dp"-->
-            <!--android:layout_height="90dp"-->
-            <!--android:layout_centerInParent="true"-->
-            <!--android:src="@drawable/circle"-->
-            <!--/>-->
-
-            <!--<com.mikhaellopez.circularimageview.CircularImageView-->
-            <!--android:id="@+id/profilefrag_prof_image"-->
-            <!--android:layout_width="85dp"-->
-            <!--android:layout_height="85dp"-->
-            <!--android:layout_centerInParent="true"-->
-            <!--app:civ_border_color="@color/colorPrimary"-->
-            <!--app:civ_border_width="1dp"-->
-            <!--app:civ_shadow="false"-->
-            <!--/>-->
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profilefrag_prof_image"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
-                android:layout_centerInParent="true"
-                app:civ_border_color="@color/colorPrimary"
-                app:civ_border_width="1dp"
-            />
-
-
-        </RelativeLayout>
-
-        <LinearLayout android:layout_width="match_parent"
+        <LinearLayout android:layout_width="0px"
                       android:layout_height="wrap_content"
-                      android:layout_centerVertical="true"
+                      android:layout_marginEnd="@dimen/activity_horizontal_margin"
                       android:layout_marginStart="@dimen/activity_horizontal_margin"
-                      android:layout_toStartOf="@id/profHeader_images"
+                      android:layout_weight="1"
                       android:gravity="center_vertical"
                       android:orientation="vertical">
 
@@ -68,6 +71,7 @@
                       android:textSize="@dimen/header_font_size"
                       tools:text="123"
             />
+
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
@@ -78,12 +82,29 @@
             />
         </LinearLayout>
 
+        <LinearLayout android:layout_width="0px"
+                      android:layout_height="match_parent"
+                      android:layout_weight="2"
+                      android:background="@drawable/rounded_corner_button"
+        >
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:gravity="center"
+                      android:textColor="@color/white"
+                      android:textAllCaps="true"
+                      android:textSize="@dimen/header_font_size"
+                      tools:text="Follow"
+            />
+
+
+        </LinearLayout>
+
         <LinearLayout android:id="@+id/prof_header_followers_container"
-                      android:layout_width="match_parent"
+                      android:layout_width="0px"
                       android:layout_height="wrap_content"
-                      android:layout_centerVertical="true"
                       android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                      android:layout_toEndOf="@id/profHeader_images"
+                      android:layout_marginStart="@dimen/activity_horizontal_margin"
+                      android:layout_weight="1"
                       android:gravity="center_vertical"
                       android:orientation="vertical">
 
@@ -106,53 +127,16 @@
                       android:textSize="@dimen/body_font_size"
             />
         </LinearLayout>
-    </RelativeLayout>
 
-
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                  android:layout_marginStart="@dimen/activity_horizontal_margin"
-                  android:orientation="vertical">
-
-        <ImageView android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_gravity="center_horizontal"
-                   android:src="@drawable/ic_action_college3_l"
-        />
-
-        <TextView android:id="@+id/college_name"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:gravity="center_horizontal"
-                  android:lines="1"
-                  android:textColor="@color/secondaryColor"
-                  android:textSize="@dimen/header_font_size"
-                  android:textStyle="bold"
-                  tools:text="City College of New York"
-        />
-
-        <View android:layout_width="70dp"
-              android:layout_height="2dp"
-              android:layout_gravity="center_horizontal"
-              android:layout_marginBottom="8dp"
-              android:layout_marginTop="10dp"
-              android:background="@color/secondaryColor"
-        />
     </LinearLayout>
 
-    <TextView android:id="@+id/profilefrag_status"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginBottom="@dimen/activity_horizontal_margin"
-              android:layout_marginEnd="32dp"
-              android:layout_marginStart="32dp"
-              android:layout_marginTop="8dp"
-              android:gravity="center"
-              android:lines="2"
-              android:textColor="#FFFFFF"
-              tools:text="TEST TEST TEST TESTTEST TEST TEST TESTTEST TEST TEST TESTTEST TEST TEST TESTTEST TEST TEST TESTTEST TEST TEST TEST "
-    />
+    <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    android:orientation="horizontal"
+    >
+
+    </RelativeLayout>
 
     <LinearLayout android:id="@+id/prof_header_action_bar"
                   android:layout_width="match_parent"
@@ -204,10 +188,7 @@
                       android:textColor="#FFFFFF"
                       android:textSize="@dimen/body_font_size"
             />
-
         </LinearLayout>
-
     </LinearLayout>
-
 
 </LinearLayout>
