--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -43,6 +43,7 @@
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
+                   android:alpha="0.25"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_send"
         />
