--- a/app/src/main/res/layout/fragment_edit_status.xml
+++ b/app/src/main/res/layout/fragment_edit_status.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:hint="@string/bio_hint"
-        android:inputType="textCapSentences"
+        android:inputType="textCapSentences|textMultiLine"
+        android:singleLine="false"
         android:lines="3"
         android:maxLength="60"
         android:maxLines="3"
