--- a/app/src/main/res/layout/fragment_friends_list.xml
+++ b/app/src/main/res/layout/fragment_friends_list.xml
@@ -7,12 +7,22 @@
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"/>
 
+    <ProgressBar android:id="@+id/progress_bar"
+                 android:layout_marginTop="150dp"
+                 android:layout_centerHorizontal="true"
+                 style="?android:attr/progressBarStyleLarge"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+    />
+
     <TextView android:id="@+id/friendsList_no_res"
-        android:layout_width="wrap_content"
+              android:layout_width="wrap_content"
               android:layout_height="wrap_content"
+              android:padding="50dp"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="64dp"
               android:text="@string/no_results"
-              android:visibility="gone"/>
+              android:visibility="gone"
+              />
 
 </RelativeLayout>
