--- a/app/src/main/res/layout/fragment_profile2.xml
+++ b/app/src/main/res/layout/fragment_profile2.xml
@@ -1,46 +1,16 @@
-<android.support.design.widget.CoordinatorLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ECF0F2">
 
-    <android.support.design.widget.AppBarLayout android:id="@+id/appbar"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"
-                                                android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    >
-        <android.support.design.widget.CollapsingToolbarLayout android:id="@+id/collapsed_toolbar"
-                                                               android:layout_width="match_parent"
-                                                               android:layout_height="wrap_content"
-                                                               app:collapsedTitleTextAppearance="@color/white"
-                                                               app:contentScrim="@color/colorPrimary"
-                                                               app:expandedTitleTextAppearance="@android:color/transparent"
-                                                               app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        >
-            <com.linute.linute.SquareCamera.SquareImageView android:id="@+id/toolbar_image"
-                                                            android:layout_width="match_parent"
-                                                            android:layout_height="match_parent"
-                                                            app:layout_collapseMode="parallax"
-            />
 
-            <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-                                               android:layout_width="match_parent"
-                                               android:layout_height="?android:attr/actionBarSize"
-                                               android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                                               app:layout_collapseMode="pin"
-                                               app:popupTheme="@style/MyDarkToolbarStyle"/>
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-
-    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/profilefrag2_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
     >
 
         <android.support.v7.widget.RecyclerView
@@ -50,4 +20,11 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+                                       android:layout_width="match_parent"
+                                       android:layout_height="?android:attr/actionBarSize"
+                                       android:theme="@style/ThemeOverlay.AppCompat.Dark"
+                                       android:background="@color/toolbar_color"
+                                       app:popupTheme="@style/MyDarkToolbarStyle"/>
+
+</FrameLayout>
