--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#142029</color>
     <color name="secondaryColor">#67CDC9</color>
 
+    <color name="toolbar_color">#142029</color>
+
     <color name="colorPrimaryDark">#0f181e</color>
     <color name="colorAccent">#1d4261</color>
     <color name="tabsScrollColor">#8a140e</color>
@@ -17,6 +19,9 @@
     <color name="eighty_black">#CC000000</color>
     <color name="twentyfive_black">#40000000</color>
     <color name="user_name_blue">#17607d</color>
+
+    <color name="messanger_blue">#009eea</color>
+    <color name="messanger_blue_dark">#0592d6</color>
 
     <color name="feed_action_bar_grey">#b2b2b2</color>
 
