--- a/app/src/main/res/menu/tapt_user_profile_menu.xml
+++ b/app/src/main/res/menu/tapt_user_profile_menu.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
->
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--android:icon="@drawable/pencil_icon"-->
-    <item android:id="@+id/feed_detail_subscribe"
-          android:orderInCategory="1"
-          android:title="Loading..."
-          app:showAsAction="never"/>
-
-
-    <!--todo add report-->
-    <!--<item android:id="@+id/feed_detail_reveal"-->
-          <!--android:orderInCategory="2"-->
-          <!--android:title="Reveal"-->
-          <!--app:showAsAction="never"/>-->
-
+    <item android:id="@+id/more_options"
+          android:orderInCategory="2"
+          app:showAsAction="always"
+          android:title="Options"
+          android:icon="@drawable/ic_action_navigation_more_vert"
+    />
 
 </menu>
