--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,6 +31,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"
             android:scaleType="fitCenter"
+            android:background="?android:selectableItemBackground"
             android:src="@drawable/create_button"/>
 
 
@@ -83,8 +84,8 @@
             android:id="@+id/signin_signin_button"
             android:layout_width="125dp"
             android:layout_height="wrap_content"
-
             android:layout_centerHorizontal="true"
+            android:background="?android:selectableItemBackground"
             android:scaleType="fitCenter"
             android:src="@drawable/login_button"
         />
