--- a/app/src/main/res/layout/fragment_people_nearby.xml
+++ b/app/src/main/res/layout/fragment_people_nearby.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -10,13 +9,10 @@
     <com.linute.linute.UtilsAndHelpers.SquareFrameLayout android:layout_width="match_parent"
                                                          android:layout_height="match_parent">
 
-        <com.synnapps.carouselview.CarouselView android:id="@+id/images"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent"
-                                                android:background="@color/seperator_color"
-                                                app:autoPlay="false"
-                                                app:snap="true"
-        />
+        <android.support.v4.view.ViewPager android:id="@+id/images"
+                                           android:layout_width="match_parent"
+                                           android:layout_height="match_parent"
+                                           android:background="@color/seperator_color"/>
 
         <TextView android:id="@+id/distance"
                   android:layout_width="wrap_content"
