--- a/app/src/main/res/layout/fragment_linute_sign_up.xml
+++ b/app/src/main/res/layout/fragment_linute_sign_up.xml
@@ -22,30 +22,30 @@
             android:gravity="center"
         >
 
-            <RelativeLayout android:id="@+id/create_prof_image"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginBottom="16dp"
-                            android:layout_marginTop="16dp">
+            <FrameLayout android:id="@+id/create_prof_image"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_centerHorizontal="true"
+                         android:layout_marginBottom="16dp"
+                         android:layout_marginTop="16dp">
 
                 <ImageView android:layout_width="102dp"
                            android:layout_height="102dp"
-                           android:layout_centerInParent="true"
+                           android:layout_gravity="center"
                            android:src="@drawable/photo_rad"/>
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/signup_profile_pic_view"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
                     android:alpha="0.4"
                     android:src="@drawable/addphoto"
                     app:civ_border_color="@color/seperator_color"
                     app:civ_border_width="1dp"/>
 
 
-            </RelativeLayout>
+            </FrameLayout>
 
 
             <LinearLayout android:id="@+id/name_create_parent"
@@ -130,6 +130,7 @@
                       android:layout_height="0px"
                       android:layout_weight="2"/>
 
+
                 <ImageView android:id="@+id/signup_get_verify_code_button"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
@@ -208,7 +209,8 @@
 
         <LinearLayout android:id="@+id/signUp_verify_form"
                       android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
+                      android:layout_height="match_parent"
+                      android:layout_marginBottom="24dp"
                       android:layout_marginTop="180dp"
                       android:orientation="vertical">
 
@@ -258,38 +260,58 @@
                 android:textSize="14sp"
                 android:theme="@style/MyEditTextTheme"/>
 
-            <LinearLayout android:id="@+id/signUp_submit_layer"
-                          android:layout_width="match_parent"
-                          android:layout_height="wrap_content">
-
-                <View android:layout_width="0px"
-                      android:layout_height="0px"
-                      android:layout_weight="3"/>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center_horizontal">
 
                 <ImageView android:id="@+id/signUp_submit_butt"
-                           android:layout_width="0px"
-                           android:layout_height="wrap_content"
-                           android:layout_weight="3"
+                           android:layout_width="120dp"
+                           android:layout_height="60dp"
+                           android:layout_gravity="center"
                            android:src="@drawable/verify_button"
+                           android:textAllCaps="true"/>
+
+                <ProgressBar
+                    android:id="@+id/signUp_progress_bar2"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
                 />
 
-                <View android:layout_width="0px"
-                      android:layout_height="0px"
-                      android:layout_weight="3"/>
-            </LinearLayout>
+            </FrameLayout>
 
 
-            <ProgressBar
-                android:id="@+id/signUp_progress_bar2"
-                style="?android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:visibility="gone"
-            />
+            <FrameLayout android:layout_width="match_parent"
+                         android:layout_height="match_parent"
+                         android:layout_gravity="center_horizontal|bottom">
+
+                <TextView android:id="@+id/resend"
+                          android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center_horizontal|bottom"
+                          android:layout_marginBottom="16dp"
+                          android:padding="@dimen/activity_horizontal_margin"
+                          android:text="Resend"
+                          android:textColor="@color/fifty_white"
+                          android:textSize="@dimen/header_font_size"
+                />
+
+                <ProgressBar
+                    android:id="@+id/resend_progress"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_margin="32dp"
+                    android:visibility="gone"
+                />
+
+            </FrameLayout>
 
         </LinearLayout>
-
 
     </ViewFlipper>
 
