--- a/app/src/main/res/layout/fragment_people_nearby.xml
+++ b/app/src/main/res/layout/fragment_people_nearby.xml
@@ -34,7 +34,7 @@
 
     <View android:layout_width="match_parent"
           android:layout_height="1dp"
-          android:background="@color/seperator_color"
+          android:background="@color/pure_white"
     />
 
     <LinearLayout android:layout_width="match_parent"
