--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
                                         android:layout_height="match_parent">
 
 
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/mainActivity_fragment_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
