--- a/app/src/main/res/layout/college_picker_item.xml
+++ b/app/src/main/res/layout/college_picker_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -8,7 +8,6 @@
     <TextView android:id="@+id/collegePicker_item_name_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_centerVertical="true"
               android:layout_margin="@dimen/activity_horizontal_margin"
               android:ellipsize="end"
               android:lines="1"
@@ -16,4 +15,4 @@
               tools:text="Baruch College"
     />
 
-</RelativeLayout>
+</LinearLayout>
