--- a/app/src/main/res/layout/fragment_friends_list.xml
+++ b/app/src/main/res/layout/fragment_friends_list.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar android:id="@id/toolbar"
-                                       android:layout_width="match_parent"
-                                       android:layout_height="wrap_content"
-                                       android:background="@color/colorPrimary"
-                                       app:navigationIcon="@drawable/ic_action_navigation_arrow_back_inverted"
-                                       app:title="Followers"
-                                       app:titleTextColor="@color/white"
-    />
+    <!--<android.support.v7.widget.Toolbar android:id="@id/toolbar"-->
+                                       <!--android:layout_width="match_parent"-->
+                                       <!--android:layout_height="wrap_content"-->
+                                       <!--android:background="@color/colorPrimary"-->
+                                       <!--app:navigationIcon="@drawable/ic_action_navigation_arrow_back_inverted"-->
+                                       <!--app:title="Followers"-->
+                                       <!--app:titleTextColor="@color/white"-->
+    <!--/>-->
 
     <android.support.v7.widget.RecyclerView android:id="@+id/friendsList_recycler_view"
                                             android:layout_width="match_parent"
